scss/main.css
/* ... */
.projet__realisations__image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.wpcf7-form {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  gap: 1rem 0;
  margin: 2rem 0;
}
@media (max-width: 1200px) {
  .wpcf7-form {
    flex-direction: column;
  }
}
.wpcf7-form-fieldset {
  margin: 0 0.25rem;
  padding: 0.8rem 1rem;
  width: calc(50% - 0.5rem);
  box-sizing: border-box;
  border: 1px solid #68636a;
}
@media (max-width: 1200px) {
  .wpcf7-form-fieldset {
    width: 100%;
  }
}
.wpcf7-form-fieldset-legend {
  text-transform: uppercase;
  font-size: 0.75rem;
  color: #68636a;
  padding: 0 0.3rem;
}
.wpcf7-form-fieldset-bottom {
  display: flex;
  align-items: center;
  width: 100%;
  margin: 0;
  border: none;
}
.wpcf7-form-group + .wpcf7-form-group {
  margin-top: 0.75rem;
}
.wpcf7-form-label {
  display: inline-block;
  padding: 0 0.25rem;
  margin: 0 0 0.25rem;
}
.wpcf7-form-label-required:after {
  content: "*";
  color: red;
  padding-left: 0.25rem;
}
.wpcf7-form-control:not(.wpcf7-submit) {
  width: 100%;
  box-sizing: border-box;
}
.wpcf7-form-control-wrap {
  display: inline-block;
  width: 100%;
}
.wpcf7-form-info {
  font-size: 0.75rem;
  color: #68636a;
}
.wpcf7-textarea {
  resize: vertical;
}
.wpcf7-response-output {
  width: calc(100% - 0.5rem);
  margin: 0.5rem 0.25rem;
}
.wpcf7-required {
  color: red;
}

.hero-header {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin: 0 auto;
  width: min(1400px + 5rem, 100%);
  border-radius: 1rem;
  background-color: #7a3292;
  aspect-ratio: 21/9;
  overflow: hidden;
}
.hero-header__video {
  position: relative;
  width: 100%;
  object-fit: cover;
  z-index: 0;
}
@media (max-width: 600px) {
  .hero-header__video {
    display: none;
  }
}
.hero-header__filter {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(122, 50, 146, 0.7490196078);
  z-index: 5;
}
.hero-header__titre {
  color: rgba(255, 255, 255, 0.7490196078);
  font-size: 5rem;
  font-weight: bold;
}
@media (max-width: 600px) {
  .hero-header__titre {
    color: #FFFFFF;
    font-size: 2.5rem;
  }
}
@media (max-width: 1200px) {
  .hero-header {
    top: 100px;
    border-radius: 0;
  }
}
@media (max-width: 600px) {
  .hero-header {
    aspect-ratio: 22/6;
  }
}

.infos {
  width: 60%;
}
.infos-left {
  margin-right: 40% !important;
}
.infos-right {
  margin-left: 40% !important;
}
@media (max-width: 1200px) {
  .infos {
    width: 100%;
    margin: 2rem 0 !important;
  }
  .infos-left, .infos-right {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

.timeline-entry {
  display: grid;
  grid-template-columns: calc((100% - 100px) / 3) 60px calc((100% - 100px) / 3 * 2);
  grid-gap: 0 20px;
}
@media (max-width: 600px) {
  .timeline-entry {
    grid-template-columns: 60px calc(100% - 100px);
    grid-template-rows: min(1fr, 120px) 1fr;
  }
}
.timeline-entry__left {
  grid-column: 1/span 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: right;
}
@media (max-width: 600px) {
  .timeline-entry__left {
    text-align: left;
    grid-column: 2/span 1;
    grid-row: 1/span 1;
  }
}
.timeline-entry__dot {
  grid-column: 2/span 1;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}
.timeline-entry__dot:before, .timeline-entry__dot:after {
  position: absolute;
  content: "";
  width: 16px;
  height: 50%;
  left: calc(50% - 8px);
  background-color: #7a3292;
}
.timeline-entry__dot:before {
  top: 0;
}
@media (max-width: 600px) {
  .timeline-entry__dot:before {
    height: 40px;
  }
}
.timeline-entry__dot:after {
  top: 50%;
}
@media (max-width: 600px) {
  .timeline-entry__dot:after {
    top: 40px;
    height: calc(100% - 40px);
  }
}
@media (max-width: 600px) {
  .timeline-entry__dot {
    grid-column: 1/span 1;
    grid-row: 1/span 2;
    align-items: flex-start;
  }
}
.timeline-entry__right {
  grid-column: 3/span 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2rem 0;
}
@media (max-width: 600px) {
  .timeline-entry__right {
    grid-column: 2/span 1;
    grid-row: 2/span 1;
    padding: 0.5rem 0 2rem;
    justify-content: flex-start;
  }
}
.timeline-entry__poste-title {
  font-weight: 600;
}
.timeline-entry__list {
  margin: 0.5rem 0;
}
.timeline-entry:first-child > .timeline-entry__dot:before {
  display: none;
}
.timeline-entry:last-child > .timeline-entry__dot:after {
  background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(122, 50, 146) 40%, rgb(122, 50, 146) 100%);
}
.timeline-dot {
  display: inline-block;
  position: relative;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #7a3292;
  z-index: 10;
}
.timeline-dot:after {
  content: "";
  position: absolute;
  top: 8px;
  left: 8px;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FFFFFF;
}
@media (max-width: 600px) {
  .timeline-dot {
    margin-top: 20px;
  }
}

.mentions {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  gap: 5%;
}
.mentions__item {
  display: inline-block;
  width: 45%;
}

/*# sourceMappingURL=main.css.map */

